Change Write Mode, Merge Read Streams